--- a/ElasticTypeMapper/Dockerfile
+++ b/ElasticTypeMapper/Dockerfile
@@ -2,12 +2,11 @@ FROM microsoft/dotnet:2.1-runtime AS base
 WORKDIR /app
 
 FROM microsoft/dotnet:2.1-sdk AS build
-#WORKDIR /src
-#COPY ElasticTypeMapper.csproj ElasticTypeMapper/
-#RUN dotnet restore ElasticTypeMapper/ElasticTypeMapper.csproj
-#COPY . .
-WORKDIR /src/ElasticTypeMapper
+WORKDIR /src
+COPY ElasticTypeMapper/ElasticTypeMapper.csproj ElasticTypeMapper/
+RUN dotnet restore ElasticTypeMapper/ElasticTypeMapper.csproj
 COPY . .
+WORKDIR /src/ElasticTypeMapper
 RUN dotnet build ElasticTypeMapper.csproj -c Release -o /app
 
 FROM build AS publish
