-Changed from NLOG to normal Console.WriteLine as it wasn't working in docker

--- a/ElasticTypeMapper/appsettings.json
+++ b/ElasticTypeMapper/appsettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "sqlHost": "localhost",
   "sqlPassword": "password",
-  "sqlSchema": "",
+  "sqlSchema": "slydepaydb",
   "sqlUser": "root",
   "sqlPort": "3306",
-  "elasticAddress": "http://localhost:9200",
+  "elasticAddress": "http://10.10.2.36:9200",
   "mongoUrl": "mongodb://localhost",
   "sourceDb": "0"
 }
