--- a/ElasticTypeMapper/Properties/launchSettings.json
+++ b/ElasticTypeMapper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ElasticTypeMapper": {
       "commandName": "Project",
-      "commandLineArgs": "--sqlSchema slydepaydb --sourceDb 0"
+      "commandLineArgs": "--sqlSchema slydepaydb --esUrl http://10.10.2.36:9200"
     }
   }
 }
