--- a/ElasticTypeMapper/appsettings.json
+++ b/ElasticTypeMapper/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "sqlHost": "localhost",
   "sqlPassword": "password",
-  "sqlSchema": "slydepaydb",
+  "sqlSchema": "*****",
   "sqlUser": "root",
   "sqlPort": "3306",
   "elasticAddress": "http://10.10.2.36:9200",
