* Testing pulling images from Github

--- a/ElasticTypeMapper/appsettings.json
+++ b/ElasticTypeMapper/appsettings.json
@@ -5,6 +5,6 @@
   "sqlUser": "root",
   "sqlPort": "3306",
   "elasticAddress": "http://10.10.2.36:9200",
-  "mongoUrl": "mongodb://localhost",
-  "sourceDb": "0"
+  "mongoUrl": "mongodb://host.docker.internal",
+  "sourceDb": "1"
 }
